# ACRoLib

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Doxyfile  LICENSE  README.md  acro.hpp  build_acrolib.cmake  bundle.py  bundle.txt
build-wpilib/: CMakeLists.txt
cpp/impl/: harness.cpp  motor.cpp
docs/: README_8md.html  annotated.html  classacro_1_1BaseMotorImpl-members.html  classacro_1_1BaseMotorImpl.html  classacro_1_1Motor-members.html  classacro_1_1Motor.html  classacro_1_1MotorFeature-members.html  classacro_1_1MotorFeature.html  classacro_1_1log_1_1DSSink__coll__graph.map  classes.html  dir_72f839ff00d8ca9f9152bdeb1f25de43.html  files.html  functions.html  functions_func.html  functions_type.html  functions_vars.html  globals.html  globals_func.html  globals_type.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.map  inherit_graph_1.md5  inherit_graph_2.map  inherit_graph_2.md5  inherits.html  log_8hpp.html  log_8hpp__incl.map  log_8hpp__incl.md5  log_8hpp_source.html  menudata.js  motor_8h.html  motor_8h__incl.map  motor_8h__incl.md5  motor_8h_source.html  motor_8hpp.html  motor_8hpp__incl.map  (+6 more)
docs/html/: acro_8hpp_source.html  base__motor_8hpp.html  base__motor_8hpp_source.html  classacro_1_1log_1_1DSSink-members.html  classacro_1_1log_1_1DSSink.html  classacro_1_1log_1_1DSSink__coll__graph.md5  classes.html  custom.css  custom.js  dir_72f839ff00d8ca9f9152bdeb1f25de43.html  dir_a15c2e666becc69095d91150e772a189.html  dir_a15c2e666becc69095d91150e772a189_dep.map  functions.html  (+11 more)
src/: log.cpp  motor.cpp
(+52 files in other folders)
